--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,8 +1,10 @@
 {% if latest_question_list %}
     <ul>
         {% for question in latest_question_list %}
+            {#            use app name#}
+                        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
             {#        use the name of the view#}
-            <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>
+            {#            <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>#}
             {#        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>#}
         {% endfor %}
     </ul>
